fixed leaderboard not showing and changed color of close

--- a/public/stylesheets/css/styles.css
+++ b/public/stylesheets/css/styles.css
@@ -707,7 +707,7 @@ span {
 .close-button {
   transition: all 0.5s ease;
   position: absolute;
-  background-color: #FF9980;
+  background-color: #994bff;
   padding: 1.5px 7px;
   left: 0;
   margin-left: -10px;
